Updated contact form
Still need to fix the testimonials section and add the footer, then I'm done with the Home page!

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <!-- WELCOME SECTION -->
     <section class="welcome-section">
       <div class="avatar-picture">
-        <img src="/images/Claire-profile-cropped.jpg" alt="" />
+        <img
+          src="/images/Claire-profile-cropped.jpg"
+          alt="Claire posing for a portrait picture"
+        />
       </div>
       <div class="welcome-text-box">
         <h2>Welcome</h2>
@@ -54,7 +57,10 @@
       <h2>Services Offered</h2>
       <div class="services">
         <div class="service-card">
-          <img src="/images/color-correcting-2.jpg" alt="" />
+          <img
+            src="/images/color-correcting-2.jpg"
+            alt="Husband and wife kissing"
+          />
           <h3>Color Correcting</h3>
           <p>
             Provide anchor images and I will handle the rest! I will ensure they
@@ -62,7 +68,10 @@
           </p>
         </div>
         <div class="service-card">
-          <img src="/images/fine-tuning.jpg" alt="" />
+          <img
+            src="/images/fine-tuning.jpg"
+            alt="Portrait picture of a groom on his wedding day"
+          />
           <h3>Fine Tuning</h3>
           <p>
             Fly away hair, acne, bystanders in the background?<br />I've got you
@@ -70,7 +79,10 @@
           </p>
         </div>
         <div class="service-card">
-          <img src="/images/color-and-fine.jpg" alt="" />
+          <img
+            src="/images/color-and-fine.jpg"
+            alt="Bride and groom kissing under the veil"
+          />
           <h3>Color & Fine Tune</h3>
           <p>
             Need it all? Let's do it! I can't wait to chat more about how I can
@@ -90,7 +102,14 @@
     </section>
     <!-- CONTACT FORM SECTION -->
     <section class="contact-section">
+      <h2>Interested in learning more?</h2>
       <div class="container">
+        <div class="image-block">
+          <img
+            src="/images/Claire-profile-cropped.jpg"
+            alt="Claire posing for a portrait picture"
+          />
+        </div>
         <form class="contact-form">
           <label for="fullname">
             Full Name*
@@ -110,14 +129,11 @@
           </label>
           <label for="fname">
             Message
-            <textarea rows="5" required></textarea>
+            <textarea rows="3" required></textarea>
           </label>
+          <button>Submit</button>
         </form>
-        <h2 class="brand-name">
-          Interested in learning more about the process?
-        </h2>
       </div>
-      <button>Submit</button>
     </section>
     <script src="app.js"></script>
   </body>
