--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Christensen Edits - Home</title>
     <link rel="shortcut icon" type="image/jpg" href="/images/Logo.png" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
@@ -16,7 +22,7 @@
           <li><a href="#">Services</a></li>
         </ul>
         <div class="logo">
-          <img src="/images/Logo.png" alt="" />
+          <a href="#"><img src="/images/Logo.png" alt="" /></a>
         </div>
         <ul class="nav-links links2">
           <li><a href="#">Process</a></li>
@@ -74,8 +80,8 @@
           />
           <h3>Fine Tuning</h3>
           <p>
-            Fly away hair, acne, bystanders in the background?<br />I've got you
-            taken care of!
+            Fly away hair, acne, bystanders in the background? <br />I've got
+            you taken care of!
           </p>
         </div>
         <div class="service-card">
@@ -129,12 +135,28 @@
           </label>
           <label for="fname">
             Message
-            <textarea rows="3" required></textarea>
+            <textarea rows="4" required></textarea>
           </label>
           <button>Submit</button>
         </form>
       </div>
     </section>
+    <!-- FOOTER SECTION -->
+    <footer>
+      <ul class="footer-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Process</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">FAQ's</a></li>
+      </ul>
+      <div class="social-links">
+        <h3>Follow me</h3>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook"></i>
+      </div>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
