--- a/html/services.html
+++ b/html/services.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Christensen Edits</title>
+    <title>Services Offered</title>
     <link rel="shortcut icon" type="image/jpg" href="/images/Logo.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/css/services.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -22,7 +23,7 @@
           <li><a href="/html/services.html">Services</a></li>
         </ul>
         <div class="logo">
-          <a href="/html/index.html"><img src="/images/Logo.png" alt="" /></a>
+          <a href="/index.html"><img src="/images/Logo.png" alt="" /></a>
         </div>
         <ul class="nav-links links2">
           <li><a href="/html/process.html">Process</a></li>
@@ -31,81 +32,11 @@
         </ul>
       </nav>
     </header>
-    <!-- JUMBOTRON -->
-    <section class="jumbotron-section">
-      <img src="/images/jumbotron.jpg" alt="" />
-    </section>
-    <!-- WELCOME SECTION -->
-    <section class="welcome-section">
-      <div class="avatar-picture">
-        <img
-          src="/images/Claire-profile-cropped.jpg"
-          alt="Claire posing for a portrait picture"
-        />
-      </div>
-      <div class="welcome-text-box">
-        <h2>Welcome</h2>
-        <h3>I am so excited to have you here!</h3>
-        <p>
-          Hi there! I’m Claire Christensen and I am the editor behind
-          Christensen Edits. I am so excited that you’re here visiting this
-          site. Not because I could potentially be your editor (which would be
-          awesome by the way) but because it means that you’re looking for a
-          change in your photography business. Whether that’s getting your free
-          time back to be with family and friends or to focus on expanding your
-          photography business. This is a very exciting time for you and I am
-          excited to be a part of this big decision.
-        </p>
-      </div>
-    </section>
-    <!-- SERVICES OFFERED -->
-    <section class="services-offered-section">
-      <h2>Services Offered</h2>
-      <div class="services">
-        <div class="service-card">
-          <img
-            src="/images/color-correcting-2.jpg"
-            alt="Husband and wife kissing"
-          />
-          <h3>Color Correcting</h3>
-          <p>
-            Provide anchor images and I will handle the rest! I will ensure they
-            match to keep you at ease!
-          </p>
-        </div>
-        <div class="service-card">
-          <img
-            src="/images/fine-tuning.jpg"
-            alt="Portrait picture of a groom on his wedding day"
-          />
-          <h3>Fine Tuning</h3>
-          <p>
-            Fly away hair, acne, bystanders in the background? <br />I've got
-            you taken care of!
-          </p>
-        </div>
-        <div class="service-card">
-          <img
-            src="/images/color-and-fine.jpg"
-            alt="Bride and groom kissing under the veil"
-          />
-          <h3>Color & Fine Tune</h3>
-          <p>
-            Need it all? Let's do it! I can't wait to chat more about how I can
-            help!
-          </p>
-        </div>
-      </div>
-    </section>
-    <!-- TESTIMONIALS SECTION -->
-    <section class="testimonials-section">
-      <h2>See why people love my work</h2>
-      <div class="testimonial">
-        <p><</p>
-        <p class="testimonial-text">Omg Claire is the best!</p>
-        <p>></p>
-      </div>
-    </section>
+
+    <!-- SERVICES SECTION -->
+    <div class="services-section">
+      <h1 class="services-title">Services Offered</h1>
+    </div>
     <!-- CONTACT FORM SECTION -->
     <section class="contact-section">
       <h2>Interested in learning more?</h2>
@@ -144,8 +75,8 @@
     <!-- FOOTER SECTION -->
     <footer>
       <ul class="footer-links">
+        <li><a href="/index.html">Home</a></li>
         <li><a href="/html/about.html">About</a></li>
-        <li><a href="/html/services.html">Services</a></li>
         <li><a href="/html/process.html">Process</a></li>
         <li><a href="/html/contact.html">Contact</a></li>
         <li><a href="/html/faq.html">FAQ's</a></li>
