Finished Process.html
Next things to do:
- adjust yellow before/after's on title; look at about.html and see how I did it there
- build out services.html and finish!

--- a/html/faq.html
+++ b/html/faq.html
@@ -35,7 +35,60 @@
 
     <!-- FAQ SECTION -->
     <div class="faq-section">
-      <h1 class="faq-title">FAQ's</h1>
+      <h1 class="faq-title">Frequently Asked Questions</h1>
+      <div class="faq-container">
+        <h2>How long does it take?</h2>
+        <p>
+          I can return an edited catalog back in 3-5 business days. If you need
+          anything expedited, we can talk about the process for this! After all,
+          my main goal is to help you so lets chat about it!
+        </p>
+      </div>
+      <div class="faq-container">
+        <h2>What is the process to send and receive images?</h2>
+        <p>
+          I use google drive to send and receive smart previews through
+          Lightroom Classic. We will go over this is detail on the initial
+          consultation call along with a PDF step-by-step form I will send to
+          you. I want to make sure this is a very easy process for you to adapt!
+        </p>
+      </div>
+      <div class="faq-container">
+        <h2>Do you edit galleries other than weddings?</h2>
+        <p>
+          YES! I love all types of galleries! Weddings, family, engagement,
+          business marketing, bridals, etc. You name it, I will edit it. 30
+          images minimum.
+        </p>
+      </div>
+      <div class="faq-container">
+        <h2>Do you offer culling services?</h2>
+        <p>
+          At this time, I do not offer culling services. However, if you are
+          absolutely in a bind, let's talk!
+        </p>
+      </div>
+      <div class="faq-container">
+        <h2>What is the initial consultation?</h2>
+        <p>
+          After I receive your interest in learning more about the process, I
+          will reach out to you through the email you gave me. We will set up a
+          time to meet for 30 min, via zoom or in person, to just get to know
+          each other and talk about next steps if you choose to do so. My goal
+          in this consultation is to see if we are both a good fit for each
+          other!
+        </p>
+      </div>
+      <div class="faq-container">
+        <h2>How do you learn my editing style?</h2>
+        <p>
+          After creating quick a step-by-step process for each image you edit, I
+          will have you send me 30 images that you will edit yourself as well
+          with 6 anchor images. Then I will compare my edits to your edits to
+          learn as efficiently and effectively as possible. The sooner I can
+          learn your style, the better for the both of us!
+        </p>
+      </div>
     </div>
     <!-- CONTACT FORM SECTION -->
     <section class="contact-section">
