--- a/html/process.html
+++ b/html/process.html
@@ -35,6 +35,45 @@
     <!-- PROCESS SECTION -->
     <div class="process-section">
       <h1 class="process-title">The Process</h1>
+      <div class="process-wrapper">
+        <div class="process-block" id="process1">
+          <img
+            src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+            alt=""
+          />
+          <h3>Initial Consultation</h3>
+          <p>
+            I like to meet with all of my potential clients for 30 minutes just
+            to get to know them! I want to make sure we can build a relationship
+            that we can both trust and that we are both the right fit for each
+            other!
+          </p>
+        </div>
+        <div class="process-block" id="process2">
+          <img
+            src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1744&q=80"
+            alt=""
+          />
+          <h3>Trial Catalog</h3>
+          <p>
+            I will have you create a step-by-step process you use for each image
+            and then send me 30 unedited pictures with 6 anchor images from a
+            catalog that you have already edited. Then the trial catalog will be
+            sent to me and then returned with my edits
+          </p>
+        </div>
+        <div class="process-block" id="process3">
+          <img
+            src="https://images.unsplash.com/photo-1573496782646-e8d943a4bdd1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1738&q=80"
+            alt=""
+          />
+          <h3>Onboarding</h3>
+          <p>
+            If you choose to continue working with me, then I will send you the
+            onboarding steps!
+          </p>
+        </div>
+      </div>
     </div>
     <!-- CONTACT FORM SECTION -->
     <section class="contact-section">
