--- a/html/contact.html
+++ b/html/contact.html
@@ -6,6 +6,7 @@
     <title>Contact Me</title>
     <link rel="shortcut icon" type="image/jpg" href="/images/Logo.png" />
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/css/contact.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
