--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="/html/services.html">Services</a></li>
         </ul>
         <div class="logo">
-          <a href="/html/index.html"><img src="/images/Logo.png" alt="" /></a>
+          <a href="/index.html"><img src="/images/Logo.png" alt="" /></a>
         </div>
         <ul class="nav-links links2">
           <li><a href="/html/process.html">Process</a></li>
