Updated titles and process.html

--- a/html/about.html
+++ b/html/about.html
@@ -38,10 +38,7 @@
       <div class="about-wrapper">
         <div class="about-container">
           <div class="about-image">
-            <img
-              src="https://images.unsplash.com/photo-1636346495134-21991bb0444a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1771&q=80"
-              alt=""
-            />
+            <img src="/images/Christensen Family-64.jpg" alt="" />
           </div>
           <div class="about-textbox">
             <h2>My family!</h2>
@@ -68,18 +65,12 @@
             </p>
           </div>
           <div class="about-image">
-            <img
-              src="https://images.unsplash.com/photo-1586227740560-8cf2732c1531?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1922&q=80"
-              alt=""
-            />
+            <img src="/images/Christensen Family-7.jpg" alt="" />
           </div>
         </div>
         <div class="about-container">
-          <div class="about-image">
-            <img
-              src="https://images.unsplash.com/photo-1633114073758-c4be9aeb15ac?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1770&q=80"
-              alt=""
-            />
+          <div class="about-image" id="portrait-image">
+            <img src="/images/Christensen Family-55.jpg" alt="" />
           </div>
           <div class="about-textbox">
             <h2>For you!</h2>
