--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
       <div class="welcome-text-box">
         <h2>Welcome</h2>
         <h3>I am so excited to have you here!</h3>
+        <div class="avatar-picture-mobile">
+          <img
+            src="/images/Claire-profile-cropped.jpg"
+            alt="Claire posing for a portrait picture"
+          />
+        </div>
         <p>
           Hi there! I’m Claire Christensen and I am the editor behind
           Christensen Edits. I am so excited that you’re here visiting this
