Mobile for about.html
Next steps
- Adjust titles and yellow before/after's
- Adjust nav bar
- Build services.html

--- a/html/about.html
+++ b/html/about.html
@@ -51,7 +51,24 @@
             </p>
           </div>
         </div>
-        <div class="about-container">
+        <div class="about-container-mobile">
+          <div class="about-image">
+            <img src="/images/Christensen Family-7.jpg" alt="" />
+          </div>
+          <div class="about-textbox">
+            <h2>Why editing?</h2>
+            <p>
+              My reasoning to be in this profession is most likely the opposite
+              reason you’re here. I need less time to myself. As a stay at home
+              mother, I found myself searching for more in life. I knew I needed
+              a challenge, other than how well I can cut food into small pieces
+              or count to 10 in a silly voice. :) I fulfilled this void with
+              editing and put all my time and energy in becoming the best editor
+              I possibly can for my clients.
+            </p>
+          </div>
+        </div>
+        <div class="about-container" id="container2">
           <div class="about-textbox">
             <h2>Why editing?</h2>
             <p>
