Finished mobile nav and titles
Next steps:
- Build services.html
- Build testimonials
- Optimize for ipad/tablet view

--- a/index.html
+++ b/index.html
@@ -15,16 +15,33 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ul class="nav-links links1">
+      <nav class="desktop-nav-bar">
+        <ul class="nav-links">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/html/about.html">About</a></li>
           <li><a href="/html/services.html">Services</a></li>
         </ul>
         <div class="logo">
-          <a href="/index.html"><img src="/images/Logo.png" alt="" /></a>
+          <a href="/index.html"
+            ><img src="/images/Logo-cropped.png" alt=""
+          /></a>
         </div>
-        <ul class="nav-links links2">
+        <ul class="nav-links">
+          <li><a href="/html/process.html">Process</a></li>
+          <li><a href="/html/contact.html">Contact</a></li>
+          <li><a href="/html/faq.html">FAQ's</a></li>
+        </ul>
+      </nav>
+      <nav class="mobile-nav">
+        <div class="logo">
+          <a href="/index.html"
+            ><img src="/images/Logo-cropped.png" alt=""
+          /></a>
+        </div>
+        <ul class="nav-links">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/html/about.html">About</a></li>
+          <li><a href="/html/services.html">Services</a></li>
           <li><a href="/html/process.html">Process</a></li>
           <li><a href="/html/contact.html">Contact</a></li>
           <li><a href="/html/faq.html">FAQ's</a></li>
