Added buttons and fixed bugs
Next steps:
- Optimize for tablet view
- Make it a working contact form
- Build testimonials

--- a/html/services.html
+++ b/html/services.html
@@ -131,9 +131,9 @@
           </div>
         </div>
         <!-- SECOND SERVICE -- MOBILE -->
-        <div class="service">
-          <h2 id="mobile-title">Fine Tuning</h2>
-          <div class="services-card" id="service2-mobile">
+        <div class="service" id="service2-mobile">
+          <h2>Fine Tuning</h2>
+          <div class="services-card">
             <div class="service-image">
               <img src="/images/9B8A8472-2.jpg" alt="" />
             </div>
