--- a/index.html
+++ b/index.html
@@ -54,31 +54,34 @@
     </section>
     <!-- WELCOME SECTION -->
     <section class="welcome-section">
-      <div class="avatar-picture">
-        <img
-          src="/images/Claire-profile-cropped.jpg"
-          alt="Claire posing for a portrait picture"
-        />
-      </div>
-      <div class="welcome-text-box">
-        <h2>Welcome</h2>
-        <h3>I am so excited to have you here!</h3>
-        <div class="avatar-picture-mobile">
+      <div class="welcome-wrapper">
+        <div class="avatar-picture">
           <img
             src="/images/Claire-profile-cropped.jpg"
             alt="Claire posing for a portrait picture"
           />
         </div>
-        <p>
-          Hi there! I’m Claire Christensen and I am the editor behind
-          Christensen Edits. I am so excited that you’re here visiting this
-          site. Not because I could potentially be your editor (which would be
-          awesome by the way) but because it means that you’re looking for a
-          change in your photography business. Whether that’s getting your free
-          time back to be with family and friends or to focus on expanding your
-          photography business. This is a very exciting time for you and I am
-          excited to be a part of this big decision.
-        </p>
+        <div class="welcome-text-box">
+          <h2>Welcome</h2>
+          <h3>I am so excited to have you here!</h3>
+          <div class="avatar-picture-mobile">
+            <img
+              src="/images/Claire-profile-cropped.jpg"
+              alt="Claire posing for a portrait picture"
+            />
+          </div>
+          <p>
+            Hi there! I’m Claire Christensen and I am the editor behind
+            Christensen Edits. I am so excited that you’re here visiting this
+            site. Not because I could potentially be your editor (which would be
+            awesome by the way) but because it means that you’re looking for a
+            change in your photography business. Whether that’s getting your
+            free time back to be with family and friends or to focus on
+            expanding your photography business. This is a very exciting time
+            for you and I am excited to be a part of this big decision.
+          </p>
+          <a class="learn-more" href="/html/about.html">Learn more</a>
+        </div>
       </div>
     </section>
     <!-- SERVICES OFFERED -->
@@ -119,6 +122,7 @@
           </p>
         </div>
       </div>
+      <a class="learn-more" href="/html/services.html">Learn more</a>
     </section>
     <!-- TESTIMONIALS SECTION -->
     <section class="testimonials-section">
