Compressed files & uploaded to Namecheap
Next steps:
- Fix bugs from Marx's notes

--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="shortcut icon" type="image/jpg" href="/images/Logo.png" />
+    <link
+      rel="shortcut icon"
+      type="image/jpg"
+      href="/images/Logo-cropped-min.png"
+    />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/css/about.css" />
     <link
@@ -24,7 +28,7 @@
         </ul>
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped.png" alt=""
+            ><img src="/images/Logo-cropped-min.png" alt="Logo"
           /></a>
         </div>
         <ul class="nav-links">
@@ -36,7 +40,7 @@
       <nav class="mobile-nav">
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped.png" alt=""
+            ><img src="/images/Logo-cropped-min.png" alt="Logo"
           /></a>
         </div>
         <ul class="nav-links">
@@ -55,7 +59,10 @@
       <div class="about-wrapper">
         <div class="about-container">
           <div class="about-image">
-            <img src="/images/Christensen Family-64.jpg" alt="" />
+            <img
+              src="/images/Christensen Family-64-min.jpg"
+              alt="Claire and her family"
+            />
           </div>
           <div class="about-textbox">
             <h2>My family!</h2>
@@ -70,7 +77,10 @@
         </div>
         <div class="about-container-mobile">
           <div class="about-image">
-            <img src="/images/Christensen Family-7.jpg" alt="" />
+            <img
+              src="/images/Christensen Family-7-min.jpg"
+              alt="Claire and husband looking at their son"
+            />
           </div>
           <div class="about-textbox">
             <h2>Why editing?</h2>
@@ -99,12 +109,18 @@
             </p>
           </div>
           <div class="about-image">
-            <img src="/images/Christensen Family-7.jpg" alt="" />
+            <img
+              src="/images/Christensen Family-7-min.jpg"
+              alt="Claire and husband looking at their son"
+            />
           </div>
         </div>
         <div class="about-container">
           <div class="about-image" id="portrait-image">
-            <img src="/images/Christensen Family-55.jpg" alt="" />
+            <img
+              src="/images/Christensen Family-55-min.jpg"
+              alt="Claire laughing"
+            />
           </div>
           <div class="about-textbox">
             <h2>For you!</h2>
@@ -125,13 +141,13 @@
       <div class="container">
         <div class="image-block">
           <img
-            src="/images/Claire-profile-cropped.jpg"
+            src="/images/Claire-profile-cropped-min.jpg"
             alt="Claire posing for a portrait picture"
           />
         </div>
         <form
           class="contact-form"
-          action="https://formsubmit.co/gpchristensen08@gmail.com"
+          action="https://formsubmit.co/christensenedits@gmail.com"
           method="POST"
         >
           <label for="fullname">
@@ -154,7 +170,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://grantchristensen.me"
+            value="https://christensenedits.com/"
           />
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
