--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Christensen Edits</title>
-    <link rel="shortcut icon" type="image/jpg" href="/images/Logo.png" />
+    <link
+      rel="shortcut icon"
+      type="image/jpg"
+      href="/images/Logo-cropped-min.png"
+    />
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -23,7 +27,7 @@
         </ul>
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped.png" alt=""
+            ><img src="/images/Logo-cropped-min.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -35,7 +39,7 @@
       <nav class="mobile-nav">
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped.png" alt=""
+            ><img src="/images/Logo-cropped-min.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -50,14 +54,14 @@
     </header>
     <!-- JUMBOTRON -->
     <section class="jumbotron-section">
-      <img src="/images/jumbotron.jpg" alt="" />
+      <img src="/images/jumbotron-min.jpg" alt="" />
     </section>
     <!-- WELCOME SECTION -->
     <section class="welcome-section">
       <div class="welcome-wrapper">
         <div class="avatar-picture">
           <img
-            src="/images/Claire-profile-cropped.jpg"
+            src="/images/Claire-profile-cropped-min.jpg"
             alt="Claire posing for a portrait picture"
           />
         </div>
@@ -66,7 +70,7 @@
           <h3>I am so excited to have you here!</h3>
           <div class="avatar-picture-mobile">
             <img
-              src="/images/Claire-profile-cropped.jpg"
+              src="/images/Claire-profile-cropped-min.jpg"
               alt="Claire posing for a portrait picture"
             />
           </div>
@@ -90,7 +94,7 @@
       <div class="services">
         <div class="service-card">
           <img
-            src="/images/color-correcting-2.jpg"
+            src="/images/color-correcting-2-min.jpg"
             alt="Husband and wife kissing"
           />
           <h3>Color Correcting</h3>
@@ -101,7 +105,7 @@
         </div>
         <div class="service-card">
           <img
-            src="/images/fine-tuning.jpg"
+            src="/images/fine-tuning-min.jpg"
             alt="Portrait picture of a groom on his wedding day"
           />
           <h3>Fine Tuning</h3>
@@ -112,7 +116,7 @@
         </div>
         <div class="service-card">
           <img
-            src="/images/color-and-fine.jpg"
+            src="/images/color-and-fine-min.jpg"
             alt="Bride and groom kissing under the veil"
           />
           <h3>Color & Fine Tune</h3>
@@ -131,10 +135,10 @@
       <div class="slider">
         <div class="slide">
           <div class="testimonial">
-            <h4 class="testimonial-header">Timely to work with</h4>
+            <h4 class="testimonial-header">Essential to your business</h4>
             <p class="testimonial-text">
-              Claire has been super helpful to my business. She's gotten my work
-              done quickly and returned in a timely manner.
+              "I cannot say enough about how amazing Claire Christensen is. She
+              has completely saved me and my business. 100% recommend her."
             </p>
             <p class="testimonial-author">Banc Media</p>
           </div>
@@ -142,22 +146,19 @@
 
         <div class="slide">
           <div class="testimonial">
-            <h4 class="testimonial-header">Just a doll</h4>
+            <h4 class="testimonial-header">Saves you time</h4>
             <p class="testimonial-text">
-              I love her! She's so cute and is always helping me keep my
-              marriage alive. Thank you, Claire!
+              "I am so excited!!! I appreciate you sooo much! This is going to
+              take so much weight off my shoulders thank you so so much!"
             </p>
-            <p class="testimonial-author">Banc Media</p>
+            <p class="testimonial-author">Ashley Shy Photography</p>
           </div>
         </div>
 
         <div class="slide">
           <div class="testimonial">
-            <h4 class="testimonial-header">Worth the price</h4>
-            <p class="testimonial-text">
-              I have saved so much time from having Claire edit my catalogs for
-              me. Now, I have more time to spend looking for a husband.
-            </p>
+            <h4 class="testimonial-header">Quick turnaround</h4>
+            <p class="testimonial-text">"Wow that was quick!"</p>
             <p class="testimonial-author">Jenny Pearl Photography</p>
           </div>
         </div>
@@ -172,13 +173,13 @@
       <div class="container">
         <div class="image-block">
           <img
-            src="/images/Claire-profile-cropped.jpg"
+            src="/images/Claire-profile-cropped-min.jpg"
             alt="Claire posing for a portrait picture"
           />
         </div>
         <form
           class="contact-form"
-          action="https://formsubmit.co/gpchristensen08@gmail.com"
+          action="https://formsubmit.co/christensenedits@gmail.com"
           method="POST"
         >
           <label for="fullname">
@@ -201,7 +202,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://grantchristensen.me"
+            value="https://christensenedits.com/"
           />
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
