--- a/html/faq.html
+++ b/html/faq.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FAQ'S</title>
-    <link rel="shortcut icon" type="image/jpg" href="/images/Logo.png" />
+    <title>FAQ's</title>
+    <link
+      rel="shortcut icon"
+      type="image/jpg"
+      href="/images/Logo-cropped-min.png"
+    />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/css/faq.css" />
     <link
@@ -24,7 +28,7 @@
         </ul>
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped.png" alt=""
+            ><img src="/images/Logo-cropped-min.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -36,7 +40,7 @@
       <nav class="mobile-nav">
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped.png" alt=""
+            ><img src="/images/Logo-cropped-min.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -112,13 +116,13 @@
       <div class="container">
         <div class="image-block">
           <img
-            src="/images/Claire-profile-cropped.jpg"
+            src="/images/Claire-profile-cropped-min.jpg"
             alt="Claire posing for a portrait picture"
           />
         </div>
         <form
           class="contact-form"
-          action="https://formsubmit.co/gpchristensen08@gmail.com"
+          action="https://formsubmit.co/christensenedits@gmail.com"
           method="POST"
         >
           <label for="fullname">
@@ -141,7 +145,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://grantchristensen.me"
+            value="https://christensenedits.com/"
           />
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
