--- a/html/services.html
+++ b/html/services.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services Offered</title>
-    <link rel="shortcut icon" type="image/jpg" href="/images/Logo.png" />
+    <link
+      rel="shortcut icon"
+      type="image/jpg"
+      href="/images/Logo-cropped-min.png"
+    />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/css/services.css" />
     <link
@@ -24,7 +28,7 @@
         </ul>
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped.png" alt=""
+            ><img src="/images/Logo-cropped-min.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -36,7 +40,7 @@
       <nav class="mobile-nav">
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped.png" alt=""
+            ><img src="/images/Logo-cropped-min.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -58,7 +62,7 @@
           <h2>Color Correcting</h2>
           <div class="services-card">
             <div class="service-image">
-              <img src="/images/R3107064.jpg" alt="" />
+              <img src="/images/services-color-correcting-min.jpg" alt="" />
             </div>
             <div class="service-description-box">
               <h3>What's included</h3>
@@ -126,7 +130,7 @@
               </div>
             </div>
             <div class="service-image">
-              <img src="/images/9B8A8472-2.jpg" alt="" />
+              <img src="/images/services-fine-tuning-min.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -135,7 +139,7 @@
           <h2>Fine Tuning</h2>
           <div class="services-card">
             <div class="service-image">
-              <img src="/images/9B8A8472-2.jpg" alt="" />
+              <img src="/images/services-fine-tuning-min.jpg" alt="" />
             </div>
             <div class="service-description-box">
               <h3>What's included</h3>
@@ -174,7 +178,7 @@
           <h2>Color Correcting and Fine Tuning</h2>
           <div class="services-card" id="service3">
             <div class="service-image">
-              <img src="/images/9B8A0296-2.jpg" alt="" />
+              <img src="/images/services-fine-and-color-min.jpg" alt="" />
             </div>
             <div class="service-description-box">
               <h3>What's included</h3>
@@ -231,13 +235,13 @@
       <div class="container">
         <div class="image-block">
           <img
-            src="/images/Claire-profile-cropped.jpg"
+            src="/images/Claire-profile-cropped-min.jpg"
             alt="Claire posing for a portrait picture"
           />
         </div>
         <form
           class="contact-form"
-          action="https://formsubmit.co/gpchristensen08@gmail.com"
+          action="https://formsubmit.co/christensenedits@gmail.com"
           method="POST"
         >
           <label for="fullname">
@@ -260,7 +264,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://grantchristensen.me"
+            value="https://christensenedits.com/"
           />
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
