added a few lazy images

--- a/html/about.html
+++ b/html/about.html
@@ -60,8 +60,10 @@
         <div class="about-container">
           <div class="about-image">
             <img
-              src="/images/Christensen Family-64-min.jpg"
+              src="/images/Christensen Family-64-min-lazy.jpg"
+              data-src="/images/Christensen Family-64-min.jpg"
               alt="Claire and her family"
+              class="lazy-image"
             />
           </div>
           <div class="about-textbox">
@@ -78,8 +80,10 @@
         <div class="about-container-mobile">
           <div class="about-image">
             <img
-              src="/images/Christensen Family-7-min.jpg"
+              src="/images/Christensen Family-7-min-lazy.jpg"
+              data-src="/images/Christensen Family-7-min.jpg"
               alt="Claire and husband looking at their son"
+              class="lazy-image"
             />
           </div>
           <div class="about-textbox">
@@ -110,16 +114,20 @@
           </div>
           <div class="about-image">
             <img
-              src="/images/Christensen Family-7-min.jpg"
+              src="/images/Christensen Family-7-min-lazy.jpg"
+              data-src="/images/Christensen Family-7-min.jpg"
               alt="Claire and husband looking at their son"
+              class="lazy-image"
             />
           </div>
         </div>
         <div class="about-container">
           <div class="about-image" id="portrait-image">
             <img
-              src="/images/Christensen Family-55-min.jpg"
+              src="/images/Christensen Family-55-min-lazy.jpg"
+              data-src="/images/Christensen Family-55-min.jpg"
               alt="Claire laughing"
+              class="lazy-image"
             />
           </div>
           <div class="about-textbox">
@@ -141,8 +149,10 @@
       <div class="container">
         <div class="image-block">
           <img
-            src="/images/Claire-profile-cropped-min.jpg"
+            src="/images/Claire-profile-cropped-min-lazy.jpg"
+            data-src="/images/Claire-profile-cropped-min.jpg"
             alt="Claire posing for a portrait picture"
+            class="lazy-image"
           />
         </div>
         <form
@@ -201,6 +211,7 @@
         ></a>
       </div>
     </footer>
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
+    <script src="/lazy.js"></script>
   </body>
 </html>
