--- a/index.html
+++ b/index.html
@@ -173,8 +173,11 @@
       <div class="container">
         <div class="image-block">
           <img
-            src="/images/Claire-profile-cropped-min.jpg"
+            src="/images/Claire-profile-cropped-min-lazy.jpg"
+            data-src="/images/Claire-profile-cropped-min.jpg"
             alt="Claire posing for a portrait picture"
+            class="lazy-image"
+            data-class="lazy"
           />
         </div>
         <form
@@ -233,6 +236,7 @@
         ></a>
       </div>
     </footer>
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
+    <script src="/lazy.js"></script>
   </body>
 </html>
